# lite_netdisk

./: README.md  build.sh  package.json
.github/workflows/: build.yml  main.yml
WEB/: index.html
WEB/js/: api.js  storage.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/drives/: aliyun.rs  baidu.rs  mod.rs  others.rs
src-tauri/src/nas/: mod.rs
src-tauri/src/p2p/: mod.rs
web/css/: base.css  components.css  layout.css  pages.css
web/js/: api.js  app.js  router.js
