[package]
name = "litedisk"
version = "1.0.0"
description = "轻盘 - 轻量级多网盘客户端"
authors = ["LiteDisk Team"]
edition = "2021"

[lib]
name = "litedisk_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
base64 = "0.22"
sha2 = "0.10"
md5 = "0.7"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
async-trait = "0.1"
thiserror = "1"
futures = "0.3"
urlencoding = "2"

# NAS 功能
actix-web = { version = "4", default-features = false, features = ["macros", "compress-brotli", "compress-gzip", "cookies"] }
actix-files = "0.6"
actix-cors = "0.7"
actix-rt = "2"
mdns-sd = "0.11"

[features]
default = ["nas"]
nas = []
